# sabarimala_yatra

./: .env.example  .gitignore  README.md
apps/api/: Cargo.toml  Dockerfile
apps/api/migrations/: 20260714000001_init.sql  20260714000002_sabarimala_knowledge.sql  20260714000003_lost_tips.sql  20260714000004_device_tokens.sql  20260714000005_food_and_packing.sql  20260714000006_packing_seed.sql  20260714000007_media_assets.sql  20260714000008_knowledge_embeddings.sql  20260714000009_otp_hardening.sql  20260718000010_refresh_tokens.sql  20260718000011_day_status_notes_feedback.sql  20260718000012_media_public_url.sql  20260718000013_yatri_roster.sql
apps/api/src/: config.rs  error.rs  llm.rs  main.rs  media_sign.rs  media_store.rs  models.rs  push.rs  rate_limit.rs  s3_presign.rs  state.rs
apps/api/src/auth/: jwt.rs  middleware.rs  mod.rs  otp.rs
apps/api/src/routes/: admin.rs  announcements.rs  assignments.rs  auth_routes.rs  chat.rs  count.rs  devices.rs  expenses.rs  food.rs  health.rs  media.rs  mod.rs  notes.rs  packing.rs  roster.rs  trip.rs
apps/mobile/: .firebaserc  README.md  firebase.json  pubspec.yaml
apps/mobile/.firebase/: hosting.YnVpbGQvd2Vi.cache
apps/mobile/lib/: app.dart  firebase_options.dart  main.dart  shell.dart
apps/mobile/test/: widget_test.dart  (+1 more)
docs/: apk-sideload.md  deploy-railway.md  deploy-web-firebase.md  fcm-setup.md  media-s3-setup.md  nfr-checklist.md  otp-webhook.md  pdf-ingestion.md
docs/trip-knowledge/: Shabarimala2026.md
infra/: docker-compose.yml  railway.toml
scripts/: build_apk.sh  deploy_web.sh  run_api.sh
(+55 files in other folders)
