[package]
name = "swamy_sharanam_api"
version = "0.1.0"
edition = "2021"
description = "Swamy Sharanam — Sabarimala yatra companion API (greenfield)"
default-run = "swamy_sharanam_api"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
csv = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
pdf-extract = "0.12.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
